LPS-113188 Fix object sidebar with horizontal scroll

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
@@ -100,6 +100,7 @@
 		.sidebar-body {
 			background-color: transparent;
 			height: auto;
+			overflow-x: hidden;
 			padding-left: 20px;
 			padding-right: 30px;
 
